--- a/project/package.json
+++ b/project/package.json
@@ -16,11 +16,15 @@
     "@babel/preset-typescript": "^7.17.12",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
-    "eslint": "^8.16.0",
+    "eslint": "^8.17.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.6.2",
-    "typescript": "^4.7.2"
+    "ts-loader": "^9.3.0",
+    "typescript": "^4.7.3",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.9.2"
   },
+  "private":true,
   "dependencies": {
     "axios": "^0.27.2",
     "chart.js": "^3.8.0"
