--- a/project/tsconfig.json
+++ b/project/tsconfig.json
@@ -5,7 +5,8 @@
     "outDir": "./built",
     "moduleResolution": "Node",
     "lib": ["ES2015", "DOM", "DOM.Iterable"],
-    "noImplicitAny": true
+    "noImplicitAny": true,
+    "module": "ES2015",
   },
   "include": ["./src/**/*"]
 }
