add: 차트 라이브러리 타입 지정 및 각종 오류 디버깅

--- a/project/tsconfig.json
+++ b/project/tsconfig.json
@@ -2,11 +2,12 @@
   "compilerOptions": {
     "allowJs": true,
     "target": "ES5",
-    "outDir": "./built",
+    "outDir": "./dist",
     "moduleResolution": "Node",
     "lib": ["ES2015", "DOM", "DOM.Iterable"],
     "noImplicitAny": true,
-    "module": "ES2015",
+    "esModuleInterop": true,
+    "typeRoots": ["./node_modules/@types"]
   },
   "include": ["./src/**/*"]
 }
